tests/negative/neg_own_inout_move.safe
-- Test: neg_own_inout_move
-- Description: Passing an owning access value by in out after it has been moved.
-- Clause: SAFE@468cf72:spec/02-restrictions.md#2.3.2.p96a:0eaf48aa
-- Expected: REJECT double_move

package inout_move_test

   type payload is record
      value : integer;

   type payload_ptr is access payload;

   function consume (ref : in out payload_ptr)
      return;

   function use_inout
      owner : payload_ptr = new ((value = 5) as payload);

      consume (owner);
      consume (owner);  -- ERROR: Owner was already moved by the first call

